# math-homework

./: LICENSE  README.md  haskell.cabal  nixpkgs.nix  shell.nix
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
